@@ -8,6 +8,7 @@ version 0.9.3
 * Fixed flickering on resizing on windows
 * Notes and changes are saved now on closing frame using the close button
 * Fixed bug in windows compiled exe which resulted in inability to open tif files
+* Sane default directory when creating playlist
 
 version 0.9.2
 --------------
